added more places

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <option value="Nehru Bhavan">Nehru Bhavan</option>
         <option value="Mother Teresa Bhavan">Mother Teresa Bhavan</option>
         <option value="Tagore Bhavan">Tagore Bhavan</option>
+        <option value="Raman Bhavan">Raman Bhavan</option>
+        <option value="canteen">canteen</option>
       </select></pre>
       <pre>Cleanliness: <input type="radio" name="cleanliness" value="cleanliness">Good
              <input type="radio" name="cleanliness" value="cleanliness">Average
